@@ -1,0 +1,2 @@
+../bin/package1/package2/JarClassProvider.class
+../lib/simple.jar
